# oxc-jest

./: .gitignore  .prettierrc  .taplo.toml  Cargo.toml  README.md  package.json
.github/workflows/: ci-js.yml  ci-rs.yml  ci.yml
napi/transform/: Cargo.toml  index.d.ts  index.js  jest.config.js  options.d.ts  package.json  tsconfig.json
napi/transform/.github/workflows/: CI.yml
napi/transform/__tests__/: index.spec.ts
napi/transform/npm/android-arm-eabi/: README.md  package.json
napi/transform/npm/android-arm64/: README.md  package.json
napi/transform/npm/darwin-arm64/: README.md  package.json
napi/transform/npm/darwin-universal/: README.md  package.json
napi/transform/npm/darwin-x64/: README.md  package.json
napi/transform/npm/freebsd-x64/: README.md  package.json
napi/transform/npm/linux-arm-gnueabihf/: README.md  package.json
napi/transform/npm/linux-arm-musleabihf/: README.md  package.json
napi/transform/npm/linux-arm64-gnu/: README.md  package.json
napi/transform/npm/linux-arm64-musl/: README.md  package.json
napi/transform/npm/linux-riscv64-gnu/: README.md  package.json
napi/transform/npm/linux-x64-gnu/: README.md  package.json
napi/transform/npm/linux-x64-musl/: README.md  package.json
napi/transform/npm/win32-arm64-msvc/: README.md  package.json
napi/transform/npm/win32-ia32-msvc/: README.md  package.json
napi/transform/npm/win32-x64-msvc/: README.md  package.json
napi/transform/src/: lib.rs  options.rs
