[workspace]
resolver = "2"
members  = ["napi/*"]

[workspace.package]
authors      = ["Don Isaac"]
categories   = ["compilers", "development-tools", "web-programming"]
edition      = "2021"
keywords     = ["JavaScript", "Jest", "Oxc", "TypeScript", "transpiler"]
license      = "MIT"
rust-version = "1.77"

[workspace.dependencies]
oxc_allocator   = { version = "0.93.0" }
oxc_codegen     = { version = "0.93.0" }
oxc_parser      = { version = "0.93.0" }
oxc_sourcemap   = { version = "4.0.0" }
oxc_span        = { version = "0.93.0" }
oxc_syntax      = { version = "0.93.0" }
oxc_transformer = { version = "0.93.0" }
oxc_semantic    = { version = "0.93.0" }

itertools    = { version = "0.14.0" }
tokio        = { version = "1.38.0", features = ["rt-multi-thread"] }
wasm-bindgen = { version = "0.2.92" }
